fix swap overflow and page header

--- a/src/components/Global/ContentContainer/ContentContainer.module.css
+++ b/src/components/Global/ContentContainer/ContentContainer.module.css
@@ -59,9 +59,7 @@
 
 
 @media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
-    }
+  
 
     .customWidthAuto {
         max-width: 1240px;
@@ -69,9 +67,6 @@
 }
 
 @media (min-width: 992px) {
-    .container {
-        max-width: 960px;
-    }
     .customWidthAuto {
         max-width: auto;
     }
@@ -80,6 +75,12 @@
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
+        width: 420px;
+    }
+    
+    .plume_container{
+        min-width: 482px;
+
     }
 
     .customWidthAuto {
